--- a/tailwind.css
+++ b/tailwind.css
@@ -732,6 +732,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mb-12 {
+  margin-bottom: 3rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -1040,6 +1044,10 @@ video {
 
 .snap-always {
   scroll-snap-stop: always;
+}
+
+.scroll-m-40 {
+  scroll-margin: 10rem;
 }
 
 .list-inside {
@@ -1371,6 +1379,10 @@ video {
 
 .gap-3 {
   gap: 0.75rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1954,6 +1966,10 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .text-left {
@@ -2541,6 +2557,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
   .sm\:underline {
     text-decoration-line: underline;
   }
